# CPlusPlus_Y2T1

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  Game.cpp  Game.h  HighScore.cpp  HighScore.h  gameObject.hpp  main.cpp  scene.hpp  sceneHandler.hpp  spriteObject.cpp  spriteObject.hpp
Assets/: .gitignore
Characters/: EnemyC.cpp  EnemyC.h  PlayerC.cpp  PlayerC.h  character.cpp  character.hpp
Elements/: Animations.cpp  Animations.h  Button.cpp  Button.h  HighScore.cpp  HighScore.h  SceneHandler.cpp  SceneHandler.hpp  ScoreDisplay.cpp  ScoreDisplay.h  character.cpp  character.hpp  gameObject.cpp  sceneHandler.cpp  sceneHandler.hpp  spriteObject.cpp  spriteObject.hpp
Game-Scenes/: Battle.cpp  Battle.h  Game.cpp  Game.h  scene.cpp  scene.hpp
